--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "@angular/cli": "~7.3.1",
+    "@angular-devkit/build-angular": "~0.13.0",
+    "@angular/compiler-cli": "~7.2.0",
     "bulma": "^0.7.5",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
-    "zone.js": "~0.8.26"
+    "zone.js": "~0.8.26",
+    "typescript": "~3.2.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.13.0",
